Corrige caminhos e nomes de arquivos

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
   <div class="login-page">
     <div class="login-image">
-      <img src="imagem/Imagem do WhatsApp de 2025-05-27 à(s) 12.49.38_cd2d5691.jpg" alt="Imagem médica">
+      <img src="imagem/imagemLogin.jpg" alt="Imagem médica">
     </div>
     <div class="login-box">
       <form class="login-form">
