--- a/telaPagar/pagar.html
+++ b/telaPagar/pagar.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' https://fonts.gstatic.com; style-src 'self' https://fonts.googleapis.com;">
+  
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; style-src 'self' https://fonts.googleapis.com https://cdnjs.cloudflare.com;">
 
   <title>Pagamento Premium</title>
   <link rel="stylesheet" href="pagar.css">
-  
+
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
   <div class="pagamento-container">
@@ -28,14 +31,10 @@
       </ul>
 
       <div class="opcoes-pagamento">
-        <a href="pagamento-mensal.html" class="btn-plano">Assinar Mensal 220/mês</a>
-        <a href="pagamento-anual.html" class="btn-plano">Assinar Anual 2400/anual</a>
-
+        <a href="pagamento-mensal.html" class="btn-plano">Assinar Mensal R$220/mês</a>
+        <a href="pagamento-anual.html" class="btn-plano">Assinar Anual R$2400/ano</a>
       </div>
-
     </div>
   </div>
-
-  <script type="module" src="../index.html"></script>
 </body>
 </html>
