--- a/public/register/register.html
+++ b/public/register/register.html
@@ -90,7 +90,7 @@
         <button type="submit" class="btn">Cadastrar</button>
 
         <div class="extras">
-          <a href="../index.html">Já tem conta? Fazer login</a>
+          <a href="../login/login.html">Já tem conta? Fazer login</a>
         </div>
       </form>
     </div>
