--- a/public/telaPagar/pagar.html
+++ b/public/telaPagar/pagar.html
@@ -15,7 +15,7 @@
 <body>
   <div class="pagamento-container">
     <!-- Botão Fechar -->
-    <a href="../index.html" class="fechar-btn" title="Voltar">
+    <a href="../login/login.html" class="fechar-btn" title="Voltar">
       <i class="fas fa-times"></i>
     </a>
 
