Adiciona index.html

--- a/public/register/register.html
+++ b/public/register/register.html
@@ -10,6 +10,7 @@
   <div class="register-page">
     <div class="register-image">
       <img src="../imagem/ressonancia-magnetica.webp" alt="Cadastro Médico">
+
     </div>
 
     <div class="register-form-box">
@@ -90,13 +91,13 @@
         <button type="submit" class="btn">Cadastrar</button>
 
         <div class="extras">
-          <a href="../login/login.html">Já tem conta? Fazer login</a>
+          <a href="login/login.html">Já tem conta? Fazer login</a>
         </div>
       </form>
     </div>
   </div>
 
   <script type="module" src="../firebase/firebaseConfig.js"></script>
-  <script type="module" src="../register/register.js"></script>
+  <script type="module" src="register/register.js"></script>
 </body>
 </html>
