--- a/public/telaPagar/pagamento-mensal.html
+++ b/public/telaPagar/pagamento-mensal.html
@@ -4,13 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; style-src 'self' https://fonts.googleapis.com https://cdnjs.cloudflare.com;">
-  
+  <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self'; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com;
+                 style-src 'self' https://fonts.googleapis.com https://cdnjs.cloudflare.com;">
+
   <title>Pagamento Mensal</title>
   <link rel="stylesheet" href="pagamento-mensal.css">
 
   <!-- Font Awesome para ícones -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
   <div class="pagamento-container">
@@ -25,24 +29,26 @@
       <div class="qrcode-section">
         <h3>Pagamento via PIX</h3>
 
-        <label for="email" style="display:none;">E-mail</label>
-        <input type="email" id="email" readonly style="display:none;" />
+        <!-- Campo oculto com o e-mail do usuário -->
+        <input type="email" id="email" readonly hidden />
 
+        <!-- QR Code dinâmico -->
         <div id="qrCodeContainer" style="display:none; text-align:center;">
           <p>Escaneie o QR Code abaixo:</p>
-          <img id="pixImage" style="max-width:300px;" />
+          <img id="pixImage" style="max-width:300px; border-radius: 8px;" alt="QR Code de Pagamento" />
         </div>
 
-        <p id="statusMsg" style="text-align:center; margin-top:15px;"></p>
-
+        <!-- Mensagem de status do pagamento -->
+        <p id="statusMsg" style="text-align:center; margin-top:15px; font-size:14px;"></p>
       </div>
     </div>
   </div>
 
-<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
 
-  
-<script src="pagamento-mensal.js"></script>
+  <!-- Script principal -->
+  <script src="pagamento-mensal.js"></script>
 </body>
 </html>
