--- a/public/login/index.html
+++ b/public/login/index.html
@@ -4,21 +4,28 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login - Gerador de Laudos RM</title>
-  <meta http-equiv="Content-Security-Policy"
-      content="default-src 'self';
-               script-src 'self' https://www.gstatic.com https://www.googleapis.com 'unsafe-inline';
-               connect-src 'self' https://firestore.googleapis.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com;
-               style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-               font-src 'self' https://fonts.gstatic.com;">
 
-  <link rel="stylesheet" href="style.css">
+  <!-- ✅ Content Security Policy corrigida -->
+  <meta http-equiv="Content-Security-Policy"
+    content="
+      default-src 'self';
+      script-src 'self' https://www.gstatic.com https://www.googleapis.com 'unsafe-inline';
+      connect-src 'self' https://firestore.googleapis.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com;
+      style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+      font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com;
+    ">
+
+  <!-- ✅ Confirme se o caminho do CSS está certo -->
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   
   <div class="login-page">
     <div class="login-image">
+      <!-- ✅ Corrigido o caminho da imagem -->
       <img src="../imagem/imagemLogin.jpg" alt="Imagem médica">
     </div>
+
     <div class="login-box">
       <form class="login-form">
         <h2>Bem-vindo(a), Doutor(a)</h2>
@@ -39,12 +46,13 @@
         <div class="extras">
           <a href="esqueci.html">Esqueceu a senha?</a>
           <span>|</span>
-          <a href="register/register.html">Criar conta</a>
+          <a href="../register/register.html">Criar conta</a>
         </div>
       </form>
     </div>
   </div>
 
-  <script type="module" src="login/login.js"></script>
+  <!-- ✅ Corrigido o caminho do JS -->
+  <script type="module" src="../login/login.js"></script>
 </body>
 </html>
