Colocando index.html e arquivos base na raiz para funcionar no GitHub Pages

--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,6 @@
   </div>
 
   <!-- ✅ Corrigido o caminho do JS -->
-  <script type="module" src="../login/login.js"></script>
+  <script type="module" src="./login.js"></script>
 </body>
 </html>
