--- a/public/telaPagar/pagamento-mensal.html
+++ b/public/telaPagar/pagamento-mensal.html
@@ -15,7 +15,7 @@
 
 
   <title>Pagamento Mensal</title>
-  <link rel="stylesheet" href="../telaPagar/pagamento-mensal.css">
+  <link rel="stylesheet" href="./pagamento-anual.css">
 
   <!-- Font Awesome para ícones -->
   <link rel="stylesheet"
@@ -55,6 +55,6 @@
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
 
   <!-- Script principal -->
-  <script src="pagamento-mensal.js"></script>
+  <script src="./pagamento-mensal.js"></script>
 </body>
 </html>
